--- a/todo2/src/App.css
+++ b/todo2/src/App.css
@@ -56,7 +56,10 @@
 }
 
 .todo{
-  width:75%;
+  display: flex;
+  justify-content: space-between;
+  align-items:flex-start;
+  width:80%;
   margin: 5% auto;
   border: 3px solid rgb(76, 187, 24);
   background-color: rgb(223, 223, 223);
@@ -67,7 +70,10 @@
 }
 
 .todocompleted{
-  width:75%;
+  display: flex;
+  justify-content: space-between;
+  align-items:flex-start;
+  width:80%;
   margin: 5% auto;
   border: 3px solid rgb(0, 132, 184);
   background-color: rgb(122, 122, 122);
@@ -75,4 +81,12 @@
   font-size: 1.1rem;
   color: rgb(245, 245, 245);
   text-decoration: line-through;
+}
+
+.update{
+  /* color:rgb(100, 99, 99); */
+  /* background-color:rgb(247, 247, 247); */
+  width:5%;
+  text-decoration: none;
+
 }
